# multimodalhugs

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
docs/: README.md  processor_redesign.md  processor_redesign_v1.md  test_map.md  training_setup.md  transformers_compatibility.md
docs/archive/: processor_redesign_v1.md
docs/customization/: custom_dataset_creation_guide.md  custom_model_creation_guide.md  custom_processor_creation_guide.md
docs/design_notes/: continue_transformers5_update.md  hf_autoclass_processor_design.md  multilingual_seq2seq_trainer.md
docs/general/: CLI.md  configuration.md  resume_training.md
docs/processors/: processor_config_formats.md  processors_overview.md
examples/fsdp/: README.md  fsdp_m2m100.yaml  fsdp_size_based.yaml  fsdp_t5.yaml
examples/multimodal_translation/: README.md  run_translation.py
modality_matters_experiments/: README.md  create_realigned_clips.py
modality_matters_experiments/features_h2s/: READMEmd  config.yaml  extract_i3d_features.sh  i3d_feature_extraction.py  setup_and_train.sh
modality_matters_experiments/poses_h2s/: README.md  config.yaml  generate.sh  pose_estimation.py  setup_and_train.sh
modality_matters_experiments/video_h2s/: README.md  config.yaml  setup_and_train.sh  video_preprocessing.sh
multimodal_embedder/: __init__.py  train.py
multimodal_embedder/custom_datasets/: dataset_utils.py
multimodal_embedder/data/: __init__.py  data_configs.py  multimodal_datacollator.py  signwriting.py  utils.py
multimodal_embedder/experiments/: debug_model.yaml
multimodal_embedder/models/: __init__.py  multimodal_embedder.py  utils.py
multimodal_embedder/modules/: __init__.py  vl_mapper.py
multimodal_embedder/processors/: __init__.py  signwriting_preprocessor.py
multimodal_embedder/utils/: utils.py
multimodal_mt/custom_datasets/: signbank_plus.py
multimodal_mt/multimodal_mt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
multimodalhugs/: __init__.py  multilingual_seq2seq_trainer.py
multimodalhugs/custom_datasets/: __init__.py  signbank_plus.py
multimodalhugs/data/: __init__.py  bilingual_image2text.py  bilingual_text2text.py  data_configs.py  how2sign.py  multimodal_datacollator.py  signwriting.py  utils.py
multimodalhugs/models/: __init__.py  multimodal_embedder.py  registry.py  utils.py
multimodalhugs/modules/: __init__.py  adapter.py  cnn_adapter.py  custom_embedding.py  feature_extractor.py  multimodal_mapper.py  special_tokens_embeddings.py  utils.py  vl_mapper.py
multimodalhugs/multimodalhugs_cli/: __init__.py  generate.py  train.py  training_setup.py
multimodalhugs/processors/: __init__.py  features2text_preprocessor.py  features_modality_processor.py  image2text_preprocessor.py  image_modality_processor.py  meta_processor.py  modality_processor.py  multimodal_secuence2text_processor.py  multimodal_sequence2sequence_processor.py  pose2text_preprocessor.py  pose_modality_processor.py  signwriting_modality_processor.py  signwriting_preprocessor.py  utils.py  (+4 more)
scripts/: compute_metrics_from_predictions_labels.py  generate_dataset_configs_docs.py  generate_documentation_readme.py  generate_model_docs.py
tests/: TESTS.md  conftest.py  global_variables.py  test_models.py
(+161 files in other folders)
