[project]
name = "multimodalhugs"
description = "MultimodalHugs is an extension of Hugging Face that offers a generalized framework for training, evaluating, and using multimodal AI models with minimal code differences, ensuring seamless compatibility with Hugging Face pipelines."
version = "0.3.0"
authors = [
    { name = "Gerard Sant", email = "gerard.santmuniesa@uzh.ch" },
    { name = "Amit Moryossef" }
]
readme = "README.md"
dependencies = [
    "datasets",
    "torch<2.6", # Currently, HuggingFace does not support changing the default value of the `weights_only` argument in `torch.load` from `False` to `True` introduced in PyTorch 2.6.
    "torchvision",
    "torchaudio",
    "transformers<=4.44.2",
    "accelerate",
    "opencv-python",
    "librosa",
    "numpy",
    "scipy",
    "pandas",
    "omegaconf",
    "sentencepiece",
    "sacremoses",
    "sacrebleu",
    "wandb",
    "nltk",
    "jiwer",
    "Pillow",
    "evaluate",
    "signwriting @ git+https://github.com/sign-language-processing/signwriting",
    "pose-format>=0.10.1",
    "ruamel.yaml",
    "av>=10.0.0",
    "tf-keras",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "isort",
    "pre-commit",
    "jupyter"
]
keras = [
    "keras-nlp",
    "keras>=3"
]
huggingface = [
    "peft"
]
visualization = [
    "matplotlib",
    "seaborn",
    "plotly"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]  # This specifies the directory to look for tests

[project.scripts]
multimodalhugs-train = "multimodalhugs.multimodalhugs_cli.train:main"
multimodalhugs-setup = "multimodalhugs.multimodalhugs_cli.training_setup:main"
multimodalhugs-generate = "multimodalhugs.multimodalhugs_cli.generate:main"
